src/css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Lato", sans-serif;
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    color: white;
    
    background: url('../img/background.jpg') fixed center;
    background-size: cover;
}

body::before{
    content: '';
    width: 100vw;
    height: 100vh;
    position: absolute;
    z-index: 0;
    background-color: #000000dc;
    backdrop-filter: blur(5px);
}

.hide {
    display: none !important;
}


.container {
    min-width: 400px;
    min-height: 400px;
    background-color: #1d1e33;
    padding: 2rem;
    z-index: 1;
}

/* IMC form */
#calc-container h2{
    text-align: center;
    margin-bottom: 2rem;
}

.form-inputs {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.form-control {
    display: flex;
    flex-direction: column;
    flex: 1;
    margin-bottom: 1rem;
}

.form-control label {
    font-weight: bold;
    margin-bottom: .6rem;
    color: #ccc;
}

.form-control input {
    padding: 1rem .5rem;
}

.action-control {
    display: flex;
    justify-content: space-between;
    margin-top: 2rem;
    gap: 1rem;
}

button {
    text-transform: uppercase;
    padding: 1rem 1.5rem;
    background-color: #f44236;
    border: none;
    color: white;
    cursor: pointer;
    opacity: .9;
    flex: 1;
}

#clear-btn {
    background-color: #444;
}

#result-container {
}

#imc-number {
    font-size: 2.4rem;
    margin: .6rem 0;
}

#imc-info {
    display: flex;
    align-items: center;

    /* width: 200px; */
    font-size: 1.4rem;
    color: #ccc;
}

#imc-info span{
    color: #e90ec4;
    font-weight: 900;
    font-size: 2.2rem;
    margin: 0 .6rem;
}

#result-container h3 {
    margin-top: 1rem;
    color: #dfdfdf;
}

#imc-table {
    display: flex;
    flex-direction: column;
    margin: 1.5rem 0;
    font-size: .8rem;
    
}

.table-header, 
.table-data {
    font-weight: bold;
    color: #ccc;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: .5rem 0;
    border-bottom: 1px solid #444;
}

.table-header h4, 
.table-data p {
    flex: 1;
    text-align: center;
}

.table-header h4 :nth-child(3)
.table-data p:nth-child(3){
    max-width: 80px;
}

#back-btn {
    margin: 0 auto;
    width: 100%;
}

.result{
    background-color: azure;
    color: #e90ec4;
}

